# AIOS

./: .bandit  .coverage  .dockerignore  .editorconfig  .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AIOS_FINAL_REPORT.md  ALL_HORIZONS_COMPLETE.md  ANDROID_APPS_ROADMAP.md  ANDROID_EMULATOR.md  ANDROID_ROADMAP.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION_ANALYSIS.md  CONSTITUTION_ROADMAP.md  CONTRIBUTING.md  DEPLOY_GUIDE_RU.md  Dockerfile  Dockerfile.android  EXECUTIVE_SUMMARY.md  FINAL_SESSION_REPORT.md  IMPROVEMENT_REPORT.md  MANIFEST.in  MASTER_INTEGRATION.md  Makefile  PRODUCTION_EXPLOITATION.md  README.md  RELEASE_NOTES_10.0.0.md  RELEASE_NOTES_10.1.0.md  RELEASE_NOTES_10.10.0.md  RELEASE_NOTES_10.11.0.md  RELEASE_NOTES_10.12.0.md  RELEASE_NOTES_10.13.0.md  (+93 more)
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
9.2.0/: 404.html  api_openapi.yaml  index.html  sitemap.xml
9.3.0/: 404.html  api_openapi.json  api_openapi.yaml  index.html  openapi_spec.py  sitemap.xml
aios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aios_cli/: __init__.py  cross_platform.py  facebook.py  instagram.py  messenger_v2.py  messengers.py  olx.py  platforms.py  rozetka.py  tiktok.py  v10.py
aios_core/: ENHANCED_INTEGRATION_README.md  STATUS.md  __init__.py  ab_testing.py  ab_testing_engine.py  access_control.py  access_controller.py  active_learning.py  adaptation_engine.py  advanced_security.py  adversarial.py  agent_architecture.py  agent_coordinator.py  agent_identity.py  agent_memory_system.py  agent_swarm.py  agent_test_runner.py  agi_safety.py  ai_advisor.py  ai_advisor_v2.py  ai_agent.py  ai_alignment.py  ai_engineer.py  ai_ethics.py  ai_governance.py  ai_os_bootstrap.py  ai_product_manager.py  ai_researcher.py  ai_safety.py  ai_safety_amplification.py  ai_safety_benchmark.py  ai_safety_causal_interpretability.py  ai_safety_constitutional.py  ai_safety_dashboard.py  ai_safety_debate.py  ai_safety_deception.py  ai_safety_dictionary_learning.py  ai_safety_evals.py  ai_safety_formal_verification.py  ai_safety_governance_advanced.py  (+315 more)
aios_mcp/: README.md  __init__.py  gateway.py  prompts.py  protocol.py  pyproject.toml  resources.py  tools.py
constitution/: ARTICLE_I_SUPREME_PRINCIPLE.md  core_principles.md
dashboard/: 3d_topology.html  index.html  substrate.html  workflow_ui.html
doc/: user_guide.md
docs/: 00_GENESIS_PROTOCOL.md  AIOS_BOOTSTRAP.md  AIOS_DOCUMENT_INDEX.md  AIOS_PROJECT_STATE.md  AIOS_SYSTEM_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_FULL.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  PLATFORMS_SCALING.md  PRODUCTION.md  ROADMAP_FULL.md  SDK_QUICKSTART.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  STATUS.md  USAGE_EXAMPLES.md  api.md  api_openapi.yaml  architecture.md  index.md  installation.md  logging.md  openapi_spec.py  quickstart.md
examples/: basic_usage.py  websocket_example.py
k8s/: autoscaling.yaml  deployment.yaml  network-policy.yaml  pdb.yaml
policies/: AIOS_ITERATION_BATCH_3_10.yaml  adaptation_policy.yaml  agent_policy.yaml  agent_reputation.yaml  automation_policy.yaml  capability_policy.yaml  change_proposal.yaml  communication_audit_policy.yaml  communication_schema.yaml  configuration_policy.yaml  consensus_policy.yaml  constitution.yaml  data_classification.yaml  decision_audit.yaml  decision_trace.yaml  diagnostics_policy.yaml  distributed_memory.yaml  event_policy.yaml  event_stream.yaml  evolution_policy.yaml  experience_memory.yaml  export_policy.yaml  fault_response.yaml  federation_policy.yaml  federation_registry.yaml  federation_sync_policy.yaml  governance_policy.yaml  harm_prevention_policy.yaml  improvement_policy.yaml  inference_policy.yaml  integration_policy.yaml  interaction_policy.yaml  knowledge_policy.yaml  knowledge_schema.yaml  memory_retention_policy.yaml  message_security_policy.yaml  node_identity_policy.yaml  node_registry.yaml  operations_policy.yaml  plugin_policy.yaml  (+16 more)
scripts/: deploy.sh  health_check.sh
sdk/: README.md  __init__.py  aios_sdk.py  pyproject.toml
setup/: android-emulator-env.sh
tests/: __init__.py  benchmark_quantum_supremacy.py  conftest.py  conftest_android.py  test_700_milestone.py  test_ab_test.py  test_ab_testing.py  test_ab_testing_boundary.py  test_ab_testing_edge.py  test_ab_testing_engine_module.py  test_ab_testing_func.py  test_ab_testing_parametrized.py  test_ab_testing_quick.py  test_ab_testing_scenario.py  test_ab_winner.py  test_active_learning.py  test_active_learning_boundary.py  test_active_learning_edge.py  test_active_learning_func.py  test_active_learning_parametrized.py  test_active_learning_quick.py  test_active_learning_scenario.py  test_adb_controller.py  test_admin_api.py  test_advanced_architectures.py  test_advanced_security_boundary.py  test_advanced_security_edge.py  test_advanced_security_full.py  test_advanced_security_func.py  test_advanced_security_quick.py  test_adversarial.py  test_adversarial_boundary.py  test_adversarial_detection.py  test_adversarial_func.py  test_adversarial_quick.py  test_agent_architecture_module.py  test_agent_architecture_quick.py  test_agent_memory_module.py  test_agent_memory_ops.py  test_agent_swarm.py  (+3094 more)
tools/: complete_constitution_tula.py  merge_aios_docs.py  mobile_apk_tester.py  olx_bootstrap.sh  quality_check.py  sync_archive_2026.py  synthesize_merged_docs.py
web_ui/: package.json
(+1043 files in other folders)
