[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "9.3.0"
description = "Self-evolving Distributed Operating System - Production Exploitation GA"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "JoTalbot", email = "jo.talbot@gmail.com"}
]
dependencies = [
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "PyYAML>=5.4.0",
    "python-dateutil>=2.8.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "graphql-core>=3.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mike>=2.0.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
aios = "aios_cli:main"

[tool.setuptools.packages.find]
where = ["."]