[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "9.7.0"
description = "Self-evolving Distributed Operating System - Production Exploitation GA"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "JoTalbot", email = "jo.talbot@gmail.com"}
]
dependencies = [
    "starlette>=1.3.1",
    "uvicorn>=0.32.0",
    "httpx>=0.28.1",
    "PyYAML>=6.0.0",
    "python-dateutil>=2.9.0",
    "websockets>=16.1.1",
    "grpcio>=1.68.0",
    "graphql-core>=3.2.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
    "flake8>=7.3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
aios = "aios_cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "strict"
timeout = 30
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "e2e: end-to-end integration tests",
    "bench: performance benchmark tests",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
