[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-mcp"
version = "0.1.0"
description = "AIOS Model Context Protocol Gateway — JSON-RPC 2.0 tools, resources, prompts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "JoTalbot", email = "jo.talbot@gmail.com"}]
dependencies = ["starlette>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
