[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-client"
version = "4.2.0"
description = "AIOS Python SDK — async/sync client for the AIOS REST API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "JoTalbot", email = "jo.talbot@gmail.com"}]
dependencies = ["httpx>=0.24.0", "websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["sdk", "sdk.*"]

[project.scripts]
aios-sdk = "sdk.cli:main"
